0-kustomize/apps/guestbook/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - name: http
      port: 80
      targetPort: http
